# SUAP

./: .gitignore  .json_primjeri.txt.kate-swp  README.md  end_device.avif  json_primjeri.txt  out.dot
dokumentacija/: .~lock.Karlo_Vučilovski_SUAP_diplomski_rad.odt#  .~lock.Karlo_Vučilovski_SUAP_tehnicaka_dokumentacija.odt#  .~lock.Karlo_Vučilovski_SUAP_tehnicka_dokumentacija.odt#  .~lock.SUAP_prezentacija.odp#  Karlo_Vučilovski_SUAP_plan_projekta.odt  Karlo_Vučilovski_SUAP_tehnicaka_dokumentacija.odt  Karlo_Vučilovski_SUAP_upute_za_koristenje.odt  SCHLIB_ESP32-TTGO-T-Display-V1.0_2025-01-30.json  SUAP_prezentacija.odp  Sustav za upravljanje korištenjem API poziva.pod  include.puml  opis.txt  plan_rada_diplomski.txt
dokumentacija/suap_api_server/Controllers/: SuapApiController.puml
dokumentacija/suap_api_server/Models/Data/: RecentData.puml
dokumentacije/: Sustav za upravljanje korištenjem API poziva.pod
suap_api_server/: suap_api_server.sln
suap_api_server/suap_api_server/: Program.cs  suap_api_server.csproj
suap_api_server/suap_api_server/-dir/: include.puml
suap_api_server/suap_api_server/Controllers/: DatagramController.cs  RegistrationController.cs  SuapApiController.cs
suap_api_server/suap_api_server/Models/: ErrorViewModel.cs
suap_api_server/suap_api_server/Models/Data/: RecentData.cs
suap_api_server/suap_api_server/Properties/: launchSettings.json
suap_end_device/: .gitignore  CMakeLists.txt  call_graph_incoming.dot  call_graph_outgoing.dot  sdkconfig  sdkconfig.old  suap_end_device_littlefs.csv
suap_end_device/littlefs/: interface_config.json
suap_end_device/main/: CMakeLists.txt  Kconfig.projbuild  global_variables.h  idf_component.yml  lvgl_demo_ui.c  main.c  spi_lcd_touch_example_main.c
suap_end_device/main/communication_data_handling/: communication_data_handling.h  request_generator.c  request_parser.c
suap_end_device/main/datagram_handling/:  main_request_parser.c  datagram_generator.c  datagram_generator.c~  datagram_handling.h  datagram_parser.c  main_request_parser.c
suap_end_device/main/drivers/: display.c  display.h  encoder.c  encoder.h  littlefs_data.c  littlefs_data.h
suap_end_device/main/networking/: http_handling.c  http_handling.h
suap_end_device/main/parser/: request_parser.c  request_parser.h
suap_end_device/main/tasks/: registration.c  request_getter.c  tasks.h
suap_end_device/main/user_interface/: user_interface.c  user_interface.h
(+18 files in other folders)
